--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1"
+  },
+  "devDependencies": {
+    "pnotify": "^5.2.0"
   }
 }
